Revert "Fixed Auto Jump To Last Position"

--- a/control/content/assets/css/sortable.css
+++ b/control/content/assets/css/sortable.css
@@ -57,22 +57,6 @@ html[buildfire] .d-item .btn-delete-icon:after{
   top: auto;
   transition: color ease-in-out .2s;
 }
-.icon-chart-growth:before {
-  content: "\e941" !important;
-}
-html[buildfire] .d-item .btn-growth-icon::before{
-  content: "\e941";
-  font-family: "icomoon";
-  font-size: 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  top: auto;
-  transition: color ease-in-out .2s;
-}
-
-
-
 html[buildfire] .d-item .btn-edit-icon::after {
   display: flex;
   align-items: center;
@@ -83,14 +67,8 @@ html[buildfire] .d-item .btn-edit-icon::after {
 html[buildfire] .d-item .btn-delete-icon:hover::after{
   color: var(--c-danger);
 }
-html[buildfire] .d-item .btn-edit-icon:hover::after, .btn-growth-icon:hover::after{
+html[buildfire] .d-item .btn-edit-icon:hover::after{
   color: var(--c-primary);
-}
-
-.btn-growth-icon:hover {
-  cursor: pointer;
-  color: var(--c-primary) !important;
-
 }
 .draggable-list-view .d-item.double-line .copy .pull-right span.btn-icon{
   top: auto;
@@ -139,16 +117,16 @@ html[buildfire] .d-item .btn-edit-icon:hover::after, .btn-growth-icon:hover::aft
   justify-content: center !important;
 }
 
-.carousel-items .d-item .btn-delete-icon,.btn-growth-icon {
+.carousel-items .d-item .btn-delete-icon {
   top: -2px !important;
 }
 
-.carousel-items .d-item .btn-delete-icon:after,.btn-growth-icon::after {
+.carousel-items .d-item .btn-delete-icon:after {
   top: 10px !important;
 }
 
 .carousel-items .d-item .btn-delete-icon,
-.d-item .copy span.btn-icon, .btn-growth-icon {
+.d-item .copy span.btn-icon {
   margin-left: 18px !important;
   border-radius: 10%;
 }
