--- a/widget/templates/layouts/list-2.html
+++ b/widget/templates/layouts/list-2.html
@@ -1,17 +1,3 @@
-<script>
-    buildfire.appearance.getAppTheme((err, appTheme) => {
-             if (err) return console.error(err);
-             let views = document.getElementById("views")
-             let iconView = document.getElementById("iconView")
-             let summary = document.getElementById("summary");
-             summary.style.color =  appTheme.colors.bodyText;
-
-             views.style.color =  appTheme.colors.bodyText;
-             iconView.style.color =  appTheme.colors.icons;
-
-    });
-</script>
-
 <div class="holder padding-zero list-layout-2" ng-class="{'pb70': globalPlaylist}">
     <div class="media-center-plugin layout3 text-overlay">
         <div class="media-center-banner clearfix">
@@ -83,12 +69,8 @@
 
 
 
-                        <p data-ng-if="item.data.summary" id="summary" class="summary ellipsis margin-zero">{{item.data.summary}}</p>
-                        <p id="views" ng-if="WidgetHome.media.data.content.showViewCount" class="ellipsis margin-zero">{{item.data.count ? item.data.count : 0}} 
-                            <span id="iconView" style="float: left;margin-right: 5px;">
-                                <i class="glyphicon glyphicon-eye-open"></i>
-                            </span>
-                        </p>
+                        <p class="summary ellipsis margin-zero">{{item.data.summary}}</p>
+
                         <span class="list-item-date" data-ng-if="item.data.mediaDate">{{item.data.mediaDate | jsDate |
                             date:"MMMM dd, yyyy"}}</span>
                         </span>
