--- a/control/content/templates/home.html
+++ b/control/content/templates/home.html
@@ -102,10 +102,8 @@
                                 <div class="pull-right">
                                     <span class="btn-icon icon-chart-growth btn-growth-icon transition-third"
                                         ng-click="ContentHome.showReport(item)"></span>
-                                </div>
-                                <div class="pull-right">
                                     <span class="btn-icon btn-delete-icon btn-danger transition-third"
-                                        ng-click="ContentHome.removeListItem($index,$event)"></span>
+                                        ng-click="ContentHome.removeListItem($index,$event)" style="margin: 0 !important;"></span>
                                 </div>
                             </div>
                         </div>
