--- a/widget/templates/layouts/list-3.html
+++ b/widget/templates/layouts/list-3.html
@@ -15,8 +15,7 @@
 <div class="holder padding-zero list-layout-3" ng-class="{'pb75': globalPlaylist}">
     <div class="media-center-plugin layout3 list-3 text-overlay">
         <div class="plugin-banner clearfix text-overlay">
-            <div ng-style="WidgetHome.data.content.images.length > 0 ? {'min-height': (9 * deviceWidth / 16) + 'px' } : {}"
-                id="carousel" build-fire-carousel=""></div>
+            <div id="carousel" build-fire-carousel=""></div>
         </div>
         <div class="padded text-left text-overlay wysiwyg" ng-if="WidgetHome.showDescription()">
             <p class="margin-bottom-zero" ng-bind-html="WidgetHome.media.data.content.descriptionHTML | safeHtml">
