--- a/widget/templates/layouts/list-4.html
+++ b/widget/templates/layouts/list-4.html
@@ -23,8 +23,7 @@
 <div class="holder padding-zero list-layout-4" ng-class="{'pb30': globalPlaylist}">
     <div class="media-center-plugin list-layout layout4 text-overlay">
         <div class="media-center-banner clearfix text-overlay">
-            <div ng-style="WidgetHome.data.content.images.length > 0 ? {'min-height': (9 * deviceWidth / 16) + 'px' } : {}"
-                id="carousel" build-fire-carousel=""></div>
+            <div id="carousel" build-fire-carousel=""></div>
         </div>
         <div class="text-left padded padding-bottom-zero clearfix text-overlay wysiwyg">
             <p ng-if="WidgetHome.showDescription()"
