fixed adding to global playlist & added text for ogg support in cp

--- a/control/content/templates/media.html
+++ b/control/content/templates/media.html
@@ -170,7 +170,9 @@
             <input type="text" class="form-control margin-bottom-ten" video-url
                 ng-model="ContentMedia.item.data.videoUrl">
             <p class="info-note margin-bottom-ten">Supported video formats are MP4, WebM, Ogg.</p>
-            <p class="info-note margin-bottom-zero">Supported share links are YouTube, Dropbox and Vimeo.</p>
+            <p class="info-note margin-bottom-ten">Supported share links are YouTube, Dropbox and Vimeo.</p>
+            <p class="info-note margin-bottom-zero">OGG format is not supported on IOS</p>
+        
         </div>
     </div>
     <hr class="none">
