--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -97,7 +97,7 @@
             <span ng-if="!globalPlaylist" class="glyphicon glyphicon-option-horizontal whiteTheme"
                 ng-click="NowPlaying.openMoreInfoOverlay()"></span>
             <span class="glyphicon glyphicon-cog whiteTheme" ng-click="NowPlaying.getSettings()"></span>
-            <i ng-if="globalPlaylist" class="btn btn-icon glyphicon whiteTheme" style="font-size: 17px; opacity: .5;" ng-class="{ 'glyphicon-plus' : !isInGlobalPlaylist(NowPlaying.item.id), 'glyphicon-minus' : isInGlobalPlaylist(NowPlaying.item.id) }" ng-click="toggleGlobalPlaylistItem($event, NowPlaying.item)" role="button"></i>
+            <i ng-if="globalPlaylist" class="btn btn-icon glyphicon whiteTheme" style="font-size: 17px; opacity: .5;" ng-class="{ 'glyphicon-plus' : !isInGlobalPlaylist(NowPlaying.item.id), 'glyphicon-minus' : isInGlobalPlaylist(NowPlaying.item.id) }" ng-click="toggleGlobalPlaylistItem(NowPlaying.item)" role="button"></i>
             <span  ng-style="{'visibility': allowAddingNotes !== false ? 'visible' : 'hidden'}"  class="glyphicon glyphicon-edit whiteTheme" ng-click="NowPlaying.addNote()"></span>
         </div>
     </div>
@@ -184,7 +184,7 @@
         <div class="overlay-content" style="position:absolute; top:0; left:0; height:100%; width: 100%; overflow:auto;">
             <div class="media-player-settings">
                 <div class="settings-list padded padding-top-zero">
-                    <div class="item clearfix row" ng-if="!NowPlaying.forceAutoPlay && !globalPlaylist">
+                    <div class="item clearfix row" ng-if="!NowPlaying.forceAutoPlay">
                         <div class="col-md-10 pull-left text-left">
                             <span class="whiteTheme">{{NowPlaying.settingsStrings.automaticallyPlayNextTrack}}</span>
                         </div>
