--- a/widget/templates/layouts/list-1.html
+++ b/widget/templates/layouts/list-1.html
@@ -42,7 +42,7 @@
             <div class="list-layout">
                 <div class="row layout-1" 
                         >
-                    <div class="clickable col-xs-6 pull-left text-overlay" ng-repeat="item in WidgetHome.items"
+                    <div class="clickable col-xs-6 pull-left text-overlay" ng-repeat="item in WidgetHome.items track by $index"
                          ng-click="WidgetHome.goToMedia($index)" class="list-item-odd">
                         <div class="list-item-media text-center border-radius-three overflow-hidden text-overlay">
                             <div play-btn="{{item.data.videoUrl.length > 0  || (skipMediaPage && (item.data.videoUrl.length > 0 || item.data.audioUrl.length > 0)) }}" class="list-media-holder text-overlay">
