--- a/widget/templates/layouts/list-3.html
+++ b/widget/templates/layouts/list-3.html
@@ -61,7 +61,7 @@
                         </p>
                         <div class="action" style="display: flex; flex-direction: row;">
                             <div class="li-actions-item">
-                                <i data-ng-if="item.hasDownloadedMedia && WidgetHome.media.data.content.allowOfflineDownload && WidgetHome.validateDownload(item)"
+                                <i data-ng-if="item.hasDownloadedMedia && WidgetHome.media.data.content.allowOfflineDownload "
                                     style="margin-left: auto; margin-top: 2px;" class="glyphicon glyphicon-ok-circle"
                                     role="button"></i>
                                 <div data-ng-if="currentlyDownloading.indexOf(item.id) > -1" class="lds-ring-small">
@@ -84,7 +84,7 @@
                     <div data-ng-if="item.data.summary" class="summary">
                         <p class="margin-bottom-zero" id="summary">{{item.data.summary}}</p>
                     </div>
-                    <p id="views" ng-if="WidgetHome.media.data.content.showViewCount" class="ellipsis margin-zero">{{item.data.count ? item.data.count : 0}} 
+                    <p id="views" ng-if="WidgetHome.media.data.content.showViewCount" class="ellipsis margin-zero">{{item.data.count ? item.data.count : 0}}
                         <span id="iconView" style="float: left;margin-right: 5px;">
                             <i class="glyphicon glyphicon-eye-open"></i>
                         </span>
