fix playing playlist

--- a/widget/templates/layouts/now-playing.html
+++ b/widget/templates/layouts/now-playing.html
@@ -123,7 +123,7 @@
                             </div>
                             <div class="btns text-center">
                                 <a ng-class="track.playing ? 'icon-pause-circle' : 'icon-play-circle'"
-                                    class="icon primaryTheme" ng-click="NowPlaying.playlistPlayPause(track)"></a>
+                                    class="icon primaryTheme" ng-click="NowPlaying.playlistPlayPause(track, $index)"></a>
                             </div>
                             <div class="remove-btn text-center dangerBackgroundTheme" style="background:red;"
                                 ng-click="NowPlaying.removeTrackFromPlayList($index)">
